--- a/character.html
+++ b/character.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>See your true character </title>
+	<title>See your true character</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <meta name="description" content="Hot Russian psychological test">
+
+        <meta property="og:url" content="http://mi-dev.shalltry.com:90/inonegame/test/character.html">
+        <meta property="og:site_name" content="See your true character">
+        <meta property="og:image" content="http://mi-dev.shalltry.com:90/inonegame/test/source/yellow.jpg">
+        <meta property="og:image:type" content="image/ipg">
+        <meta property="og:image:width" content="620">
+        <meta property="og:image:height" content="434">
+
+        <meta property="twitter:creator" content="ellisonleao">
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:title" content="See your true character">
+        <meta property="twitter:description" content="See your true character">
+        <meta property="twitter:image:src" content="http://mi-dev.shalltry.com:90/inonegame/test/source/yellow.jpg">
+        <meta property="twitter:image:width" content="620">
+        <meta property="twitter:image:height" content="434">
+        <meta name="msapplication-TileColor" content="#2A5977">
+        <meta name="theme-color" content="#2A5977">
 	<link href="./css/main.css" rel="stylesheet"></head>
+	<script type="text/javascript" src="./js/share.js"></script>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+	     (adsbygoogle = window.adsbygoogle || []).push({
+	          google_ad_client: "ca-pub-2476175026271293",
+	          enable_page_level_ads: true
+	     });
+	</script>
+
 </head>
 <body>
 	<header>
@@ -17,24 +44,160 @@
 		</div>
 	</header>
 	<section class="main">
-		<div class="answer">
-			<p>You got: <span>21</span></p>
+		<div class="title">
+			<p>If you let you choose a monkey in the picture, which one would you choose?</p>
 		</div>
 		<div class="imageWrap">
 			
 		</div>
-		<div class="desc">
-			<p>You are a positive person,not afraid of any obstaclesand difficulties,and 46% of people choosethe same.</p>
-		</div>
-	</section>
-	<section class="share">
-		<div class="icon">
-
+		<div class="input">
+			<select class="number">
+				<option value="">Please select</option>
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+				<option value="5">5</option>
+				<option value="6">6</option>
+				<option value="7">7</option>
+				<option value="8">8</option>
+				<option value="9">9</option>
+				<option value="10">10</option>
+				<option value="11">11</option>
+				<option value="12">12</option>
+				<option value="13">13</option>
+				<option value="14">14</option>
+				<option value="15">15</option>
+				<option value="16">16</option>
+				<option value="17">17</option>
+				<option value="18">18</option>
+				<option value="19">19</option>
+				<option value="20">20</option>
+				<option value="21">21</option>
+			</select>
+			<input type="button" value="Submit" class="submit" onclick="submit()">
 		</div>
 	</section>
 	<footer>
-		<div class="split"></div>
-		<div></div>
-	</footer>
+		<div class="split">
+			<span>
+				<image src="./source/split.svg" width="100%" height="100%"/>
+			</span>
+			<span class="split2">
+				<image src="./source/split.svg" width="100%" height="100%"/>
+			</span>
+			<div>Related Suggestion</div>
+		</div>
+		<div class="suggestion_wrap">
+			<div class="adWrap _100">
+				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- inonegame.com-320x100-（1） -->
+				<ins class="adsbygoogle"
+				style="display:inline-block;width:320px;height:100px"
+				data-ad-client="ca-pub-2476175026271293"
+				data-ad-slot="7611566096"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</div>
+			<div class="suggestion" onclick="window.open('./enneagram.html', '_self')">
+				<div class="text">
+					<p class="title">Enneagram Personality Test</p>
+					<p class="desc">Know the true self!</p>
+					<p class="number">72.0W people have been tested.</p>
+				</div>
+				<div class="icon">
+					<img src="./source/enneagram.png">
+				</div>
+			</div>
+			<div class="suggestion" onclick="window.open('./character.html', '_self')">
+				<div class="text">
+					<p class="title">See your true character</p>
+					<p class="desc">Hot Russian psychological test</p>
+					<p class="number">45.0W people have been tested.</p>
+				</div>
+				<div class="icon">
+					<img src="./source/enneagram.png">
+				</div>
+			</div>
+			<div class="suggestion" onclick="window.open('./../game/flappyBird/', '_self')">
+				<div class="text">
+					<p class="title">Flappy Bird</p>
+					<p class="desc">Control the bird does not drop</p>
+					<p class="number">7455.0W people have been tested.</p>
+				</div>
+				<div class="icon">
+					<img src="./source/flappyBird.png">
+				</div>
+			</div>
+			<div class="adWrap _100">
+				<ins class="adsbygoogle"
+				style="display:inline-block;width:320px;height:100px"
+				data-ad-client="ca-pub-2476175026271293"
+				data-ad-slot="7419994409"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</div>
+			<div class="suggestion" onclick="window.open('./pressure.html', '_self')">
+				<div class="text">
+					<p class="title">How much pressure can you bear?</p>
+					<p class="desc">You can withstand multiple</p>
+					<p class="number">143.0W people have been tested.</p>
+				</div>
+				<div class="icon">
+					<img src="./source/pressure.png">
+				</div>
+			</div>
+			<div class="suggestion" onclick="window.open('./../game/towerblocks/', '_self')">
+				<div class="text">
+					<p class="title">Tower Block</p>
+					<p class="desc">Control the bird does not drop</p>
+					<p class="number">155.0W people have been tested.</p>
+				</div>
+				<div class="icon">
+					<img src="./source/towerBlock.png">
+				</div>
+			</div>
+			<div class="adWrap _100">
+				<ins class="adsbygoogle"
+				style="display:inline-block;width:320px;height:100px"
+				data-ad-client="ca-pub-2476175026271293"
+				data-ad-slot="8616815565"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</div>
+			<div class="suggestion" onclick="window.open('./../game/feedfrog/', '_self')">
+				<div class="text">
+					<p class="title">Feed frog</p>
+					<p class="desc">Feed frog eats mosquitoes</p>
+					<p class="number">155.0M people have been tested.</p>
+				</div>
+				<div class="icon">
+					<img src="./source/feedFrog.png">
+				</div>
+			</div>
+			<div class="adWrap _250">
+				<ins class="adsbygoogle"
+				style="display:inline-block;width:300px;height:250px"
+				data-ad-client="ca-pub-2476175026271293"
+				data-ad-slot="2742382793"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</div>
+		</div>	</footer>
 </body>
+<script type="text/javascript">
+	var submit = function() {
+	var selectNumber = document.getElementsByClassName('number')[0].value;
+	if(selectNumber) {
+		window.open('rCharacter.html?ans=' + selectNumber, '_self')
+	}
+	else {
+		alert('Please choose your answer');
+	}
+};
+</script>
 </html>
